--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.appdynamics.extensions</groupId>
     <artifactId>tibcoems-monitoring-extension</artifactId>
-    <version>2.4.2</version>
+    <version>3.0.0</version>
     <name>Tibco EMS Monitor</name>
     <description>Monitor Tibco EMS</description>
 
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>com.appdynamics</groupId>
             <artifactId>appd-exts-commons</artifactId>
-            <version>1.6.2</version>
+            <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>javax.jms</groupId>
@@ -80,24 +80,9 @@
             <systemPath>${project.basedir}/lib/tibrvjms.jar</systemPath>
         </dependency>
         <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>1.6</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.6</version>
-        </dependency>
-        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>1.1.3</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -121,13 +106,13 @@
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito</artifactId>
-            <version>1.4.7</version>
+            <version>1.7.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-module-junit4</artifactId>
-            <version>1.4.7</version>
+            <version>1.7.3</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -140,8 +125,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -209,13 +194,13 @@
                                 <copy todir="${target.dir}">
                                     <fileset dir="src/main/resources/conf" includes="monitor.xml" />
                                     <fileset dir="src/main/resources/conf" includes="config.yml" />
+                                    <fileset dir="src/main/resources/conf" includes="metrics.xml" />
                                 </copy>
                                 <copy todir="${target.dir}">
                                     <fileset dir="${build.directory}"
                                              includes="${project.artifactId}.${project.packaging}" />
                                 </copy>
                                 <mkdir dir="${target.dir}/lib"/>
-
                                 <zip destfile="${target.dir}-${project.version}.zip">
                                     <zipfileset dir="${target.dir}" filemode="755"
                                                 prefix="TibcoEMSMonitor/" />
