--- a/src/main/resources/conf/config.yml
+++ b/src/main/resources/conf/config.yml
@@ -5,37 +5,27 @@
 ## sslIdentityPassword: password to decrypt the private key
 ## sslTrustedCerts: path to the server certificate file (example: conf/server_cert.pem)
 ##########
-emsServers:
-   # Keep the display name blank if Tibco EMS Extension is monitoring only one Tibco Server. 
+servers:
+   # Keep the display name blank if Tibco EMS Extension is monitoring only one Tibco Server.
    - displayName: "Local EMS"
-     host: "192.168.1.9"
-     port: 7222
+     host: "192.168.1.11"
+     port: "6222"
      # Supports tcp and ssl
      protocol: "tcp"
+     #Add fault Tolerant servers
+     faultTolerantServers: ["192.168.1.11:7222"]
      user: "admin"
      # password or encryptedPassword and encryptionKey are required
-     password: ""
+     password: "admin"
      encryptedPassword:
      encryptionKey:
-     collectConnections: true
-     collectDurables: true
-     collectRoutes: true
-     collectConsumers: true
-     collectProducers: true
-     collectQueues: true
-     collectTopics: true
-     #config to show temp queues and topics
-     showTemp: false
-     #config to show system queues and topics
-     showSystem: false
-     includeQueues: []
-     excludeQueues: ["satish1"]
-     includeTopics: ["satish"]
-     excludeTopics: []
-     includeDurables: []
-     excludeDurables: []
-     includeRoutes: []
-     excludeRoutes: []
+    #We are going to  remove support for .* in next release. Other regex's are still supported.
+     includeQueues: [".*"]
+     includeTopics: [".*"]
+     includeDurables: [".*"]
+     includeRoutes: [".*"]
+     includeProducers: [".*"]
+     includeConsumers: [".*"]
      sslIdentityFile:
      sslIdentityPassword:
      sslIdentityEncryptedPassword:
@@ -47,8 +37,9 @@ emsServers:
      sslVendor:
 
 
-# number of concurrent tasks
-numberOfThreads: 1
+# Each server instance needs 9 threads, one for the server instance itself, and others for collecting metrics from connection, consumer, durable, producer, queue, route, server and topic.
+# So, please change the value accordingly(Based on the number of server instances you are monitoring).
+numberOfThreads: 15
 
 #This will create this metric in all the tiers, under this path. Please make sure to have a trailing |
 #metricPrefix: "Custom Metrics|Tibco EMS|"
