adding NOTICE and LICENSE to out zip

--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,12 @@
                                     <fileset dir="${build.directory}"
                                              includes="${project.artifactId}.${project.packaging}" />
                                 </copy>
+                                <copy todir="${target.dir}">
+                                    <fileset dir="${project.basedir}" includes="LICENSE"/>
+                                </copy>
+                                <copy todir="${target.dir}">
+                                    <fileset dir="${project.basedir}" includes="NOTICE.txt"/>
+                                </copy>
                                 <mkdir dir="${target.dir}/lib"/>
                                 <zip destfile="${target.dir}-${project.version}.zip">
                                     <zipfileset dir="${target.dir}" filemode="755"
