--- a/src/main/resources/conf/config.yml
+++ b/src/main/resources/conf/config.yml
@@ -13,7 +13,7 @@ servers:
      # Supports tcp and ssl
      protocol: "tcp"
      #Add fault Tolerant servers
-     faultTolerantServers: ["192.168.1.11:7222"]
+     faultTolerantServers: ["tcp://192.168.1.11:7222"]
      user: "admin"
      # password or encryptedPassword and encryptionKey are required
      password: "admin"
